@@ -1,5 +1,6 @@
-# API
 falcon==1.1.0
-
-# Oslo
 oslo.config>=3.22.0 # Apache-2.0
+oslo.config>=3.22.0  # Apache-2.0
+oslo.serialization>=1.10.0  # Apache-2.0
+python-barbicanclient>=4.0.0  # Apache-2.0
+keystoneauth1>=2.21.0  # Apache-2.0
